--- a/test.html
+++ b/test.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
     <head>
-        <meta charset='utf-8'>
+        <meta charset="utf-8">
         <title>Vis UnitVector</title>
-        <script type='text/javascript' src='d3/d3.js'></script>
-        <style type='text/css'>
+        <script type="text/javascript" src="d3/d3.js"></script>
+        <style type="text/css">
             /* No style rules here yet */       
         </style>
     </head>
     <body>
-        <script type='text/javascript'>
+        <script type="text/javascript">
 
             //Width and height
             var w = 1170, h=680;
             
             var dataset, cur_lab, selectQ = false; // a global
-            d3.json('Unit2Vec_tSNE.json').then(function(json) 
+            d3.json("Unit2Vec_tSNE.json").then(function(json) 
             {
               dataset = json;
               visualize();
@@ -24,36 +24,35 @@
             function visualize()
             {
                 //Create SVG element
-                var svg = d3.select('body')
-                .append('svg')
-                .attr('width', w)
-                .attr('height', h);
+                var svg = d3.select("body")
+                .append("svg")
+                .attr("width", w)
+                .attr("height", h);
 
                 //创建背景用于触发点击事件（颜色复位）
-                svg.append('rect')
-                .attr('x', 0)
-                .attr('y', 0)
-                .attr('width', w)
-                .attr('height', h)
-                .attr('fill','black')
-                .on('click',function(d){
+                svg.append("rect")
+                .attr("x", 0)
+                .attr("y", 0)
+                .attr("width", w)
+                .attr("height", h)
+                .attr("fill","black")
+                .on("click",function(d){
                 	//触发背景点击事件，复位颜色的事件
-                    d3.selectAll('circle')
-                    .attr('fill', function(d) {
+                    d3.selectAll("circle")
+                    .attr("fill", function(d) {
                         return color_map(d3.values(d)[0].lab);
                         });
                     //给文本传空字符串，因为当前点击的是背景而没点击任何点
-                    d3.select('text').text('');
+                    d3.select("text").text("");
                     selectQ = false;
                 });
 
                 //添加文本显示当前点击的点对应的音素类别
-                svg.append('text')
-                .attr('x',50)
-                .attr('y',80)
-                .attr('font-size',50)
-                .attr('fill','white');
-
+                svg.append("text")
+                .attr("x",100)
+                .attr("y",80)
+                .attr("font-size",50);
+                
                 var min_max_x = d3.extent(dataset,function(d){return d3.values(d)[0].pos[0]});
                 var min_x = min_max_x[0];
                 var max_x = min_max_x[1];
@@ -67,8 +66,8 @@
                 var yScale = d3.scaleLinear().domain([min_y,max_y]).range([h,0]);
 
 
-                var phoneme = ['a', 'ai', 'an', 'ang', 'ao', 'b', 'c', 'ch', 'd', 'e', 'ei', 'en', 'eng', 'er', 'f', 'g', 'h', 'i', 'ia', 'ian', 'iang', 'iao', 'ie', 'ii', 'iii', 'in', 'ing', 'iong', 'iou', 'j', 'k', 'l', 'm', 'n', 'o', 'ong', 'ou', 'p', 'q', 'r', 's', 'sh', 'sil', 'sp', 't', 'u', 'ua', 'uai', 'uan', 'uang', 'uei', 'uen', 'ueng', 'uo', 'v', 'van', 've', 'vn', 'x', 'z', 'zh']
-                var color = ['#781c86', '#6d1c90', '#621d99', '#571ea2', '#4e20ab', '#4a27b2','#462eb9', '#4236c1', '#403ec6', '#3f47c9', '#3f51cc', '#3e5acf','#3f63cf', '#416bce', '#4274ce', '#447ccd', '#4783c8', '#498ac4', '#4c90c0', '#4f97bb', '#539bb5', '#56a0ae', '#5aa5a8', '#5ea9a1', '#63ac9a', '#68af93', '#6cb28c', '#72b485', '#78b67e', '#7db877', '#83ba70', '#89bb6b', '#90bc65', '#96bd60', '#9dbe5a', '#a3be56', '#aabd52', '#b0bd4e', '#b7bd4b', '#bdbb48', '#c3ba46', '#c9b843', '#ceb541', '#d3b240', '#d8ae3e', '#dcab3c', '#dfa53b', '#e19f3a', '#e49938', '#e69237', '#e68a35', '#e68133', '#e67832', '#e56e30', '#e4632e', '#e2582c', '#e04e29', '#df4327', '#dd3726', '#dc2c24', '#db2122']
+                var phoneme = ["a", "ai", "an", "ang", "ao", "b", "c", "ch", "d", "e", "ei", "en", "eng", "er", "f", "g", "h", "i", "ia", "ian", "iang", "iao", "ie", "ii", "iii", "in", "ing", "iong", "iou", "j", "k", "l", "m", "n", "o", "ong", "ou", "p", "q", "r", "s", "sh", "sil", "sp", "t", "u", "ua", "uai", "uan", "uang", "uei", "uen", "ueng", "uo", "v", "van", "ve", "vn", "x", "z", "zh"]
+                var color = ["#781c86", "#6d1c90", "#621d99", "#571ea2", "#4e20ab", "#4a27b2","#462eb9", "#4236c1", "#403ec6", "#3f47c9", "#3f51cc", "#3e5acf","#3f63cf", "#416bce", "#4274ce", "#447ccd", "#4783c8", "#498ac4", "#4c90c0", "#4f97bb", "#539bb5", "#56a0ae", "#5aa5a8", "#5ea9a1", "#63ac9a", "#68af93", "#6cb28c", "#72b485", "#78b67e", "#7db877", "#83ba70", "#89bb6b", "#90bc65", "#96bd60", "#9dbe5a", "#a3be56", "#aabd52", "#b0bd4e", "#b7bd4b", "#bdbb48", "#c3ba46", "#c9b843", "#ceb541", "#d3b240", "#d8ae3e", "#dcab3c", "#dfa53b", "#e19f3a", "#e49938", "#e69237", "#e68a35", "#e68133", "#e67832", "#e56e30", "#e4632e", "#e2582c", "#e04e29", "#df4327", "#dd3726", "#dc2c24", "#db2122"]
                 //创建音素与对应颜色的序数比例尺
                 var color_map = d3.scaleOrdinal()
                             .domain(phoneme)
@@ -88,50 +87,52 @@
                 }                
 
                 //设置点的相关事件属性
-                svg.selectAll('circle')
+                svg.selectAll("circle")
                 .data(dataset)
                 .enter()
-                .append('circle')
-                .attr('cx', function(d) {
+                .append("circle")
+                .attr("cx", function(d) {
                     return xScale(d3.values(d)[0].pos[0]);
                 })
-                .attr('cy', function(d) {
+                .attr("cy", function(d) {
                     return yScale(d3.values(d)[0].pos[1]);
                 })
-                .attr('r', 3)
-                .attr('fill', function(d) {
+                .attr("r", 3)
+                .attr("fill", function(d) {
                     return color_map(d3.values(d)[0].lab);
                 })
-                .call(d3.zoom().on('zoom',function(){
-                    svg.attr('transform',d3.event.transform);
+                .call(d3.zoom().on("zoom",function(){
+                    svg.attr("transform",d3.event.transform);
                 }))
-                .on('mouseover',function(d){
+                .on("mouseover",function(d){
+                	var info = d3.values(d)[0]
                     if(selectQ){
-                        if(d3.values(d)[0].lab == cur_lab)
-                            new Audio('wav_phone/'+d3.values(d)[0].name+'.wav').play();
+                        if(info.lab == cur_lab)
+                            new Audio("wav_phone/"+info.name+".wav").play();
                     }
                     else
-                        new Audio('wav_phone/'+d3.values(d)[0].name+'.wav').play();
+                        new Audio("wav_phone/"+info.name+".wav").play();
+                	//给文本传当前鼠标滑过的音素名
+                    d3.select("text")
+                    .text(info.lab)
+                    .attr("fill","white");
                 })
-                .on('click',function(d){
+                .on("click",function(d){
                     cur_lab = d3.values(d)[0].lab;
                     //给指定点上彩色，并根据每个单元时长不同上不一样的亮度
                     //时长越小越按，越大越亮
-                    d3.selectAll('circle').filter(function(d) {
+                    d3.selectAll("circle").filter(function(d) {
                         return d3.values(d)[0].lab == cur_lab;
                     })
-                    .attr('fill', function(d) {
-                        var dur_this = d3.values(d)[0].dur;
-                        var lab_this = d3.values(d)[0].lab
-                        return d3.rgb(color_map(lab_this)).darker(color_map_dict[lab_this](dur_this));
+                    .attr("fill", function(d) {
+                    	var info = d3.values(d)[0]
+                        return d3.rgb(color_map(info.lab)).darker(color_map_dict[info.lab](info.dur));
                         })
                     //给其余点上灰色
-                    d3.selectAll('circle').filter(function(d) {
+                    d3.selectAll("circle").filter(function(d) {
                         return d3.values(d)[0].lab != cur_lab;
                     })
-                    .attr('fill','grey');
-                    //给文本传当前点击的音素名
-                    d3.select('text').text(cur_lab);
+                    .attr("fill","grey");
                     selectQ = true;
                 })
                 ;
